--- a/Example.ipynb
+++ b/Example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2016-09-07T21:54:56.754552",
@@ -25,7 +25,7 @@
     "import pandas_datareader.data as web\n",
     "import datetime\n",
     "\n",
-    "import sharpeRratio"
+    "from pysharperratio import estimateSNR"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2016-09-07T22:08:13.580586",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2016-09-07T22:12:27.127331",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -106,26 +106,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/amir/code_workspace/sharpeRratio/sharpeRratio/helpers.py:30: FutureWarning: pd.expanding_max is deprecated for ndarrays and will be removed in a future version\n",
+      "/home/amir/code_workspace/sharpeRratio/src/pysharperratio/__init__.py:30: FutureWarning: pd.expanding_max is deprecated for ndarrays and will be removed in a future version\n",
       "  rolling_max = pd.expanding_max(np.cumsum(x),min_periods=1)\n",
-      "/home/amir/code_workspace/sharpeRratio/sharpeRratio/helpers.py:33: FutureWarning: pd.expanding_min is deprecated for ndarrays and will be removed in a future version\n",
+      "/home/amir/code_workspace/sharpeRratio/src/pysharperratio/__init__.py:33: FutureWarning: pd.expanding_min is deprecated for ndarrays and will be removed in a future version\n",
       "  rolling_min = pd.expanding_min(np.cumsum(x),min_periods=1)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.017395403152825797"
+       "0.017403993824239423"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sharpeRratio.estimateSNR(log_rets,permutations)"
+    "estimateSNR(log_rets,permutations)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
