--- a/Example.ipynb
+++ b/Example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2016-09-07T21:54:56.754552",
@@ -19,6 +19,12 @@
    },
    "outputs": [],
    "source": [
+    "\"\"\" Ignore Warnings \"\"\"\n",
+    "def warn(*args, **kwargs):\n",
+    "    pass\n",
+    "import warnings\n",
+    "warnings.warn = warn\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -42,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2016-09-07T22:08:13.580586",
@@ -68,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2016-09-07T22:12:27.127331",
@@ -97,28 +103,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/amir/code_workspace/pySharpeRratio/src/pysharperratio/__init__.py:29: FutureWarning: pd.expanding_max is deprecated for ndarrays and will be removed in a future version\n",
-      "  rolling_max = pd.expanding_max(np.cumsum(x),min_periods=1)\n",
-      "/home/amir/code_workspace/pySharpeRratio/src/pysharperratio/__init__.py:32: FutureWarning: pd.expanding_min is deprecated for ndarrays and will be removed in a future version\n",
-      "  rolling_min = pd.expanding_min(np.cumsum(x),min_periods=1)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.017012091890979429"
+       "0.017313095522148211"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,33 +122,6 @@
    "source": [
     "estimateSNR(log_rets,permutations)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
