--- a/README
+++ b/README
@@ -8,7 +8,7 @@ The estimator computes the difference between the drawdown and drawup durations.
 ### Author & Maintainer: Amir Sani
 
 ## Reference
-Challet, Damien. "Sharper asset ranking from total drawdown durations." arXiv preprint arXiv:1505.01333 (2015).
+Challet, Damien. "Sharper asset ranking from total drawdown durations." arXiv preprint arXiv:1505.01333 (2015), preprint available at http://arxiv.org/abs/1505.01333.
 
 ### Bibtex
 @article{challet2015sharper,
@@ -19,4 +19,3 @@ Challet, Damien. "Sharper asset ranking from total drawdown durations." arXiv pr
 }
 
 ## Copyright (c) 2017, Amir Sani
- 
