--- a/README
+++ b/README
@@ -5,10 +5,14 @@ This package implements a moment-free estimator of the Sharpe (signal-to-noise) 
 
 The estimator computes the difference between the drawdown and drawup durations. First, the cumulative sum of x (e.g. prices) is computed, then the total drawdown and drawup durations are computed. Precision is improved by averaging the estimator on several random permutations of x.
 
-### Author & Maintainer: Amir Sani
+### Author: Amir Sani
+
+### Maintainers: Amir Sani & Damien Challet
 
 ## Reference
 Challet, Damien. "Sharper asset ranking from total drawdown durations." arXiv preprint arXiv:1505.01333 (2015), preprint available at http://arxiv.org/abs/1505.01333.
+
+Preprint available at http://arxiv.org/abs/1505.01333
 
 ### Bibtex
 @article{challet2015sharper,
