--- a/Example.ipynb
+++ b/Example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2016-09-07T21:54:56.754552",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2016-09-07T22:08:13.580586",
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "# The sample series length\n",
-    "N = 500\n",
+    "N = 302\n",
     "\n",
     "# Number of permutations\n",
     "permutations = 1000"
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2016-09-07T22:12:27.127331",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -111,10 +111,10 @@
     {
      "data": {
       "text/plain": [
-       "0.017313095522148211"
+       "0.023311558594394634"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,6 +122,15 @@
    "source": [
     "estimateSNR(log_rets,permutations)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
