moved data to the example folder and updated example.ipynb

--- a/example/Example.ipynb
+++ b/example/Example.ipynb
@@ -9,24 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2016-09-07T21:54:56.754552",
      "start_time": "2016-09-07T21:54:55.144746"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
-    "\"\"\" Ignore Warnings \"\"\"\n",
-    "def warn(*args, **kwargs):\n",
-    "    pass\n",
-    "import warnings\n",
-    "warnings.warn = warn\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "from scipy.interpolate.interpolate import interp1d as sint\n",
     "\n",
     "import pandas_datareader.data as web\n",
     "import datetime\n",
@@ -48,13 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2016-09-07T22:08:13.580586",
      "start_time": "2016-09-07T22:08:13.576367"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -62,7 +64,7 @@
     "N = 302\n",
     "\n",
     "# Number of permutations\n",
-    "permutations = 1000"
+    "permutations = 10000"
    ]
   },
   {
@@ -74,13 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2016-09-07T22:12:27.127331",
      "start_time": "2016-09-07T22:12:26.908734"
     },
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -103,36 +108,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spline_data = pd.read_csv('spline_data.csv',index_col=0).values\n",
+    "spline = sint(spline_data[:,0],spline_data[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.023311558594394634"
+       "3.981116583235542e-05"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "estimateSNR(log_rets,permutations)"
+    "estimateSNR(log_rets,spline,permutations)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -145,16 +159,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
